--- a/jekyll/_cci2/v.2.19-overview.adoc
+++ b/jekyll/_cci2/v.2.19-overview.adoc
@@ -4,6 +4,7 @@
 :icons: font
 :toc: macro
 :toc-title:
+:sectanchors:
 
 This document provides a summary of features and product notes for the release of CircleCI Server v{serverversion}. For a full list of changes, including patch releases, refer to the https://circleci.com/server/changelog[changelog]. For a step by step guide to **upgrading** your CircleCI Server installation to v{serverversion}, see our <<updating-server#nomad-launch-configuration,upgrade guide>>.
 
@@ -27,11 +28,17 @@ WARNING: If you are upgrading from pre v2.18.x, and have at any time changed you
 
 * The first user to access a CircleCI Server installation should be granted admin access. Currently, there is an issue preventing this from happening when LDAP authentication is in use. Follow https://circleci.com/docs/2.0/authentication#grant-admin-access-to-user[this guide] for a workaround.
 
-* If any changes have been made to your networking configuration you may need to run the following steps to ensure you can use SSH to inspect your builds:
+* If any changes have been made to your networking configuration from the default, you may need to run the following steps to ensure you can use SSH to inspect your builds:
 ** On all Nomad Client machine, create `/etc/circleci/public-ipv4`
 ** This file should contain the public (if applicable) or private IP of the nomad client
++
+TIP: For more information on SSH reruns in Server installations, see the https://circleci.com/docs/2.0/ssh-server/[SSH Rerun Architecture in Server] guide.
 
 * Classic Load Balancer is no longer available from v2.19.02 due to the ciphersuite changes listed in the notes below. CircleCI no longer accepts requests from https://docs.aws.amazon.com/elasticloadbalancing/latest/classic/elb-ssl-security-policy.html[Classic Load Balancer], so you should move to https://docs.aws.amazon.com/elasticloadbalancing/latest/network/introduction.html[Network Load Balancer (NLB)] or https://docs.aws.amazon.com/elasticloadbalancing/latest/application/introduction.html[Application Load Balancer (ALB)].
+
+## What's New in v2.19.05
+
+* Fixed a bug that could lead to the VM database ending up in an incorrect state in the event of a Services Machine crash or manual termination of VM Service instances.
 
 ## What's New in v2.19.04
 
